tests/fail/zero_frequency.stderr
error: `frequency` must be positive
 --> tests/fail/zero_frequency.rs:9:39
  |
9 |     let _wave = sine_wave!(frequency: 0);
  |                                       ^
